src/components/layout.css
@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@ 400;500;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&display=swap");

html,
body {
  overflow: hidden;
}

body {
  font-family: "IBM Plex Sans", sans-serif;
  font-size: 16px;
  margin: 0;
}

.cursor {
  width: 1rem;
  height: 1rem;
  border: 2px solid #fefefe;
  background: white;
  border-radius: 100%;
  position: absolute;
  transform: translate(-50%, -50%);
  pointer-events: none;
  z-index: 9999;
  mix-blend-mode: difference;
}

